# InductiveCoderLangGraph

./: .env.example  .gitignore  IMPLEMENTATION.md  README.md  Spec.md  USAGE.md  codebook_template.json  prompt_template.md  pyproject.toml
docs/: CONTRIBUTING.md
examples/: README.md  example_prompt.md
examples/data/: review1.txt  review2.txt  review3.txt
inductive_coder/: __init__.py  logger.py  main.py
inductive_coder/application/: state.py  tools.py  use_cases.py  workflows.py
inductive_coder/application/categorization_workflow/: __init__.py  edges.py  graph.py  nodes.py  prompts.py  state.py
inductive_coder/application/coding_workflow/: __init__.py  edges.py  graph.py  nodes.py  prompts.py  state.py
inductive_coder/application/prompts/: README.md  __init__.py  templates.py
inductive_coder/application/reading_workflow/: __init__.py  edges.py  graph.py  nodes.py  prompts.py  state.py
inductive_coder/domain/: __init__.py  entities.py  repositories.py
inductive_coder/infrastructure/: llm_client.py  repositories.py
inductive_coder/presentation/: __init__.py  cli.py  ui.py
tests/: conftest.py  test_entities.py  test_parallel_processing.py  test_repositories.py
