[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inductivecoderlanggraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph==1.0.8",
    "pydantic>=2.12.5",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "langchain==1.2.10",
    "langchain-openai==1.1.10",
]

[project.scripts]
inductive-coder = "inductive_coder.main:app"
[tool.hatch.build.targets.wheel]
packages = ["inductive_coder"]
